# librarian

./: .gitignore  .golangci.yaml  .yamlfmt  .yamlfmtignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.DIREGAPIC  GEMINI.md  PR_DESCRIPTION.md  README.md  action.yaml  all_test.go  build-librarian-diregapic.sh  cloudbuild-exitgate-deprecated.yaml  cloudbuild-exitgate-dispatcher.yaml  cloudbuild-exitgate-release-container.yaml  cloudbuild-exitgate-release.yaml  cloudbuild-exitgate.yaml  cloudbuild-test.yaml  codecov.yml  container-structure-test.yaml  diregapic_pipeline.sh  do_java.sh  e2e_helpers_test.go  e2e_test.go  embed.go  generate_e2e_test.go  go.mod  go.sum  librarian.yaml  release-please-config.json  run_diregapic  system_test.go  test_output.txt  update_sdk.go
.gcb/: cloudbuild-generate.yaml
.gemini/: styleguide.md
.gemini/prompts/: shared-context.md
.github/: CODEOWNERS  multi_approvers.yaml  release-please.yml
.github/workflows/: addlicense.yaml  analytics.yaml  ci.yaml  create-issue-on-failure.yaml  dart.yaml  go.yaml  golang.yaml  govulcheck.yaml.yml  govulncheck.yaml  java.yaml  librarian-ci.yaml  librarian.yaml  linter.yaml  multi_approvers.yaml  nodejs.yaml  php.yaml  python.yaml  ruby.yaml  rust.yaml  sidekick.yaml
.kokoro/: build.sh  continuous.cfg  update-dotnet.sh
.librarian/: state.yaml
.louhi/: check_if_gob_is_synced.go  check_pr_status.go
cmd/: config_doc_generate.go  config_doc_generate_test.go  doc_generate.go  doc_generate_test.go
cmd/automation/: doc.go  main.go
cmd/doc/: doc_generate.go
cmd/generator/: main.go
cmd/legacyautomation/: doc.go  main.go
cmd/legacylibrarian/: doc.go  main.go
cmd/librarian/: Dockerfile  build-docker-images.sh  doc.go  doc_generate.go  doc_generate_test.go  main.go
cmd/librarianops/: doc.go  main.go
cmd/sideflip/: main.go
cmd/sidekick/: main.go
cmd/sidekick-migrate/: main.go
cmd/surfer/: main.go
cmd/test-gcr/: README.md
containers/: go.mod
containers/bootstrap/: bootstrap.go  bootstrap_test.go  main.go
containers/cmd/: cmd.go  cmd_test.go
containers/java/: Dockerfile  entrypoint.sh
containers/message/: message.go
containers/requests/: requests.go
contrib/test-gcr/: README.md  main.go  main_test.go
dart/: pubspec.yaml
doc/: api-allowlist-schema.md  architecture.md  cli-commands.md  config-schema.md  container-commands.md  container-contract.md  contributor-guide.md  dart-comment-reference-fixes.md  developer-guide.md  generate-request-schema.md  howto-guide-forks-and-pull-requests.md  howwewritego.md  language-onboarding.md  library-maintainer-guide.md  library-onboarding.md  onboarding.md  repository-library-onboarding.md  rotation-playbook.md  sdk-yaml-principles.md  sdk-yaml-schema.md  state-schema.md  surfer.md  testing.md
doc/decision-records/: 00000-decision-record-template.md  000000-decision-record-template.md  README.md
doc/gcloud/: gcloud-yaml-schema.md
doc/legacylibrarian/: onboarding.md  (+1 more)
languagecontainer/: go.mod  go.sum
scratch/: compare_and_remove.go  kept_java_overrides.txt  list_overrides.go  update_allowlist.go
test_env/: developer_connect_alpha.yaml  developer_connect_beta.yaml  developer_connect_ga.yaml  field_simple_types_v1.yaml  filtered_command_v1.yaml  help_text_v1.yaml  hidden_command_v1.yaml  hidden_feature_v1.yaml  iam_alpha.yaml  iam_beta.yaml  iam_ga.yaml  method_async_v1.yaml  method_custom_v1.yaml  method_minimal_list_v1.yaml  method_operations_v1.yaml  method_output_format_v1.yaml  multi_service_v1.yaml  multi_version_multi_track.yaml  parallelstore_alpha.yaml  parallelstore_beta.yaml  parallelstore_ga.yaml  resource_standard_v1.yaml  setup.sh  split_yaml.go  test.sh
testdata/: e2e-test.Dockerfile  e2e_func.go  successful-marshaling-and-writing.json  successful-marshaling-librarianState-yaml.yaml  successful-unmarshal-libraryState.json
tool/: update_java_release_levels.go  update_sdk_yaml.go
tool/cmd/migrate/testdata/parse-bazel/custom-import-path/google/longrunning/: BUILD.bazel
tool/cmd/migrate/testdata/parse-bazel/error/: BUILD.bazel
(+2632 files in other folders)
