go_gapic_library(
    name = "analyticshub_go_gapic",
    srcs = [":analyticshub_proto_with_info"],
    grpc_service_config = "analyticshub_v1_grpc_service_config.json",
    importpath = "cloud.google.com/go/bigquery/analyticshub/apiv1;analyticshub",
    metadata = True,
    release_level = "ga",
    rest_numeric_enums = False,
    service_yaml = "analyticshub_v1.yaml",
    transport = "grpc+rest",
    deps = [
        ":analyticshub_go_proto",
        "//google/iam/v1:iam_go_proto",
        "//google/longrunning:longrunning_go_proto",
        "@com_google_cloud_go_longrunning//:go_default_library",
        "@com_google_cloud_go_longrunning//autogen:go_default_library",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
    ],
)

go_gapic_library(
    name = "analyticshub_go_gapic",
    srcs = [":analyticshub_proto_with_info"],
    grpc_service_config = "analyticshub_v1_grpc_service_config.json",
    importpath = "cloud.google.com/go/bigquery/analyticshub/apiv1;analyticshub",
    metadata = True,
    release_level = "ga",
    rest_numeric_enums = False,
    service_yaml = "analyticshub_v1.yaml",
    transport = "grpc+rest",
    deps = [
        ":analyticshub_go_proto",
        "//google/iam/v1:iam_go_proto",
        "//google/longrunning:longrunning_go_proto",
        "@com_google_cloud_go_longrunning//:go_default_library",
        "@com_google_cloud_go_longrunning//autogen:go_default_library",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
    ],
)
