load("@rules_proto//proto:defs.bzl", "proto_library")

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################
load("@com_google_googleapis_imports//:imports.bzl", "proto_library_with_info")

proto_library(
    name = "operations_proto",
    srcs = ["operations.proto"],
    deps = [
        "//google/api:annotations_proto",
        "//google/api:client_proto",
        "//google/api:field_behavior_proto",
        "//google/rpc:status_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

proto_library_with_info(
    name = "longrunning_proto_with_info",
    deps = [":operations_proto"],
)

##############################################################################
# Go
##############################################################################
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_gapic_assembly_pkg",
    "go_gapic_library",
    "go_grpc_library",
)

go_grpc_library(
    name = "longrunning_go_proto",
    importpath = "cloud.google.com/go/longrunning/autogen/longrunningpb",
    protos = [":operations_proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:annotations_go_proto",
        "//google/rpc:status_go_proto",
    ],
)

go_gapic_library(
    name = "longrunning_go_gapic",
    srcs = [":longrunning_proto_with_info"],
    grpc_service_config = "longrunning_grpc_service_config.json",
    importpath = "cloud.google.com/go/longrunning/autogen;longrunning",
    metadata = True,
    release_level = "ga",
    rest_numeric_enums = False,
    service_yaml = "longrunning.yaml",
    transport = "grpc+rest",
    deps = [":longrunning_go_proto"],
)

# Open Source Packages
go_gapic_assembly_pkg(
    name = "gapi-cloud-longrunning-go",
    deps = [
        ":longrunning_go_gapic",
        ":longrunning_go_gapic_srcjar-metadata.srcjar",
        ":longrunning_go_gapic_srcjar-snippets.srcjar",
        ":longrunning_go_gapic_srcjar-test.srcjar",
        ":longrunning_go_proto",
    ],
)
